Issue #2958776 by mglaman, majmunbog: Header is misaligned in Safari

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7093,7 +7093,8 @@ body.toolbar-fixed.toolbar-vertical.toolbar-tray-open.toolbar-fixed {
     -webkit-flex-shrink: 0;
         -ms-flex-negative: 0;
             flex-shrink: 0;
-    margin-right: auto; }
+    margin-right: auto;
+    max-height: 42px; }
   .region-header > .container {
     display: -webkit-box;
     display: -webkit-flex;
