--- a/assets/scss/regions/_header.scss
+++ b/assets/scss/regions/_header.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-shrink: 0;
     margin-right: auto;
+    max-height: 42px;
   }
 
   > .container{
